--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1,4 +1,3 @@
-
 /* Set the font family for the entire page */
 body {
   font-family: Arial, sans-serif;
@@ -66,6 +65,8 @@ header {
 
 .card-body {
   text-align: center;
+  width: 75%;
+  /* border: 1px solid red; */
 }
 
 .card-footer {
@@ -92,14 +93,12 @@ section {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-
 }
 
 .row {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
- 
 }
 
 .col {
@@ -113,7 +112,6 @@ section {
   object-fit: cover;
 } */
 
-
 .card {
   display: flex;
   flex-direction: column;
@@ -126,7 +124,7 @@ section {
 .card-body {
   text-align: left;
   overflow-y: auto;
-   max-height: 200px; 
+  max-height: 200px;
 }
 
 .card-img-container {
@@ -139,7 +137,6 @@ section {
   width: 200px;
   height: 200px;
   object-fit: cover;
-  
 }
 
 .card h2 {
@@ -148,7 +145,26 @@ section {
 
 .card p {
   text-align: left;
+ 
 }
 
+.product-details {
+  width: 100%;
+  display: flex;
+ 
+}
 
+.p-s,
+.r-r {
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+  /* border: 1px solid red; */
+  justify-content: space-between;
+ 
+}
+
+.fw-bold{
+  color:black
+}
 
