--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -40,9 +40,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/landing">Home</a>
-        
+              <a class="nav-link active" aria-current="page" href="/landing"
+                >Home</a
+              >
+            </li>
           </ul>
+
           <div class="d-flex">
             <a class="btn me-3 btn-outline-dark" href="/signup" role="button"
               >Signup</a
@@ -66,42 +69,49 @@
     <!-- Section-->
     <section class="py-5">
       <div class="container px-4 px-lg-5 mt-5">
-          <div class="row">
-            <% products.forEach(function(product) { %>
-              <div class="col mb-5">
-                <div class="card h-100">
-                  <!-- Product image-->
-                  <img class="card-img-top" src="<%= product.image %>" alt="" />
-                  <!-- Product details-->
-                  <div class="card-body p-4">
-                    <div class="text-left">
-                      <!-- Product name-->
-                      <h5 class="fw-bolder"><%= product.name %></h5>
-                      <!-- Product description-->
-                      <p class="description"><%= product.description %></p>
+        <div class="row">
+          <% products.forEach(function(product) { %>
+          <div class="col mb-5">
+            <div class="card h-100">
+              <!-- Product image-->
+              <img class="card-img-top" src="<%= product.image %>" alt="" />
+              <!-- Product details-->
+              <div class="card-body p-4">
+                <div class="text-left">
+                  <!-- Product name-->
+                  <h5 class="fw-bolder"><%= product.name %></h5>
+                  <!-- Product description-->
+                  <p class="description"><%= product.description %></p>
+                  <div class="product-details">
+                    <div class="p-s">
                       <!-- Product price-->
-                      <h6 class="fw-bold">Price: $<%= product.price %></h6>
+                      <button disabled class="fw-bold">
+                        Price: $<%= product.price %>
+                      </button>
                       <!-- Product stock count-->
-                      <p class="fw-bold">Stock Count: <%= product.countInStock %></p>
+                      <button disabled class="fw-bold">
+                        Stock Count: <%= product.countInStock %>
+                      </button>
+                    </div>
+                    <div class="r-r">
                       <!-- Product rating-->
-                      <p class="fw-bold">Rating: <%= product.rating %>/5</p>
+                      <button disabled class="fw-bold">
+                        Rating: <%= product.rating %>/5
+                      </button>
                       <!-- Product reviews count-->
-                      <p class="fw-bold">Reviews Count: <%= product.numReview %></p>
+                      <button disabled class="fw-bold">
+                        Reviews Count: <%= product.numReview %>
+                      </button>
                     </div>
                   </div>
-                  
-                
-               
-                  </div>
                 </div>
-              
-            <% }); %>
+              </div>
+            </div>
           </div>
+
+          <% }); %>
         </div>
-
-
-
-      
+      </div>
     </section>
     <!-- Footer-->
     <footer class="py-5 bg-dark">
